samples/_failures_safe/1761179249_90c176_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b0a797d.c: In function ‘main’:
./samples/SAFE/__tmp_2b0a797d.c:154:16: error: missing terminating " character
  154 |         printf("Enter edge %d (u
      |                ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2b0a797d.c:154:9: error: expected expression at end of input
  154 |         printf("Enter edge %d (u
      |         ^~~~~~
./samples/SAFE/__tmp_2b0a797d.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2b0a797d.c:154:9: error: expected declaration or statement at end of input
